@@ -15,7 +15,8 @@ LIBDIR=		$(PLBASE)\library\pldoc
 EXDIR=		$(PKGDOC)\examples\pldoc
 LIBPL=		doc_html.pl doc_wiki.pl doc_modes.pl doc_register.pl \
 		doc_process.pl doc_index.pl doc_search.pl doc_man.pl \
-		doc_library.pl hooks.pl doc_htmlsrc.pl doc_colour.pl
+		doc_library.pl hooks.pl doc_htmlsrc.pl doc_colour.pl \
+		doc_util.pl
 PUBPL=		pldoc.pl doc_http.pl
 SUPPORT=	pldoc.css pldoc.js pllisting.css \
 		edit.gif zoomin.gif zoomout.gif reload.gif favicon.ico \
